test/compile_errors/err_c_import_untranslated_macro_requires_allow.w
//! expect-error: c_import: untranslated macro 'MAX'

use c_import("#define MAX(a,b) ((a) > (b) ? (a) : (b))\n")

fn main:
    print("unreachable")
